// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Divider Component > props.align is equal to center 1`] = `
<div>
  <div
    class="t-divider t-divider--horizontal t-divider--center"
    role="separator"
  >
    <div
      class="t-divider__content"
    >
      Text
    </div>
  </div>
</div>
`;

exports[`Divider Component > props.align is equal to left 1`] = `
<div>
  <div
    class="t-divider t-divider--horizontal t-divider--left"
    role="separator"
  >
    <div
      class="t-divider__content"
    >
      Text
    </div>
  </div>
</div>
`;

exports[`Divider Component > props.align is equal to right 1`] = `
<div>
  <div
    class="t-divider t-divider--horizontal t-divider--right"
    role="separator"
  >
    <div
      class="t-divider__content"
    >
      Text
    </div>
  </div>
</div>
`;

exports[`Divider Component > props.children works fine 1`] = `
<div>
  <div
    class="t-divider t-divider--horizontal t-divider--center"
    role="separator"
  >
    <div
      class="t-divider__content"
    >
      <span
        class="custom-node"
      >
        TNode
      </span>
    </div>
  </div>
</div>
`;

exports[`Divider Component > props.content works fine 1`] = `
<div>
  <div
    class="t-divider t-divider--horizontal t-divider--center"
    role="separator"
  >
    <div
      class="t-divider__content"
    >
      <span
        class="custom-node"
      >
        TNode
      </span>
    </div>
  </div>
</div>
`;

exports[`Divider Component > props.layout is equal to horizontal 1`] = `
<div>
  <div
    class="t-divider t-divider--horizontal t-divider--center"
    role="separator"
  >
    <div
      class="t-divider__content"
    />
  </div>
</div>
`;

exports[`Divider Component > props.layout is equal to vertical 1`] = `
<div>
  <div
    class="t-divider t-divider--vertical t-divider--center"
    role="separator"
  >
    <div
      class="t-divider__content"
    />
  </div>
</div>
`;
